# Codex-agent-superteam

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
agent_loop/: advance.py  auto_next.py  cli.py  codex_runner.py  config.py  dispatch.py  doctor.py  git_utils.py  github_integration.py  github_issues.py  github_reviews.py  merge_gate.py  orchestrator.py  paths.py  privacy.py  release.py  reporting.py  review.py  review_loop.py  runs.py  scope_guard.py  self_test.py  state_machine.py  tasks.py  template.py  watch.py  worktree.py
docs/: github-smoke.md  reference-insights.md  roadmap.md  runtime-protocol.md  system-architecture.md
docs/superpowers/plans/: 2026-04-25-local-cli-mvp.md
project-workspace/: artifact-index.yaml  current-overview.md  workflow-state.yaml
project-workspace/02_artifacts/project-brief/: project-brief-v1.md
protocols/: execution-protocol.md  karpathy-coding-guidelines.md
scripts/: agent-loop-quickstart.sh  agent-loop-wizard.sh
templates/: review.template.md  run-status.template.yaml  subagent-brief.template.md  task.template.md
tests/: test_cli_workflow.py  test_complete_superteam.py  test_github_actions_ci.py  test_orchestrator_v03.py  test_orchestrator_v04.py  test_orchestrator_v06.py  test_quickstart_script_v09.py  test_release_template_v07.py  test_review_revise_v05.py  test_self_test_v08.py  test_wizard_script_v10.py
