[project]
name = "codex-agent-loop"
version = "0.6.0"
description = "Git-backed Codex agent team automation framework"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
agent-loop = "agent_loop.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["agent_loop*"]
